--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "test": "echo TODO",
     "prepublishOnly": "npm run build",
     "build": "tsc -p ./tsconfig.build.json",
-    "start:debug": "node --loader @k-foss/ts-esnode --experimental-modules --harmony-optional-chaining --experimental-specifier-resolution=node --harmony-top-level-await ./",
+    "start:debug": "node --loader @k-foss/ts-esnode --experimental-modules --experimental-specifier-resolution=node --harmony-top-level-await ./",
     "dev": "nodemon",
     "prettier": "prettier --config .prettierrc --check \"src/**/*ts\"",
     "lint": "eslint ./src --ext .js,.ts"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@elastic.io/ntlm-client": "^1.0.0",
+    "date-fns": "^2.16.1",
+    "js-yaml": "^3.14.0"
+  },
   "devDependencies": {
     "@k-foss/ts-esnode": "^1.7.0",
+    "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.11.5",
+    "@types/ntlm-client": "^0.1.0",
+    "@types/request": "^2.48.5",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "eslint": "^7.10.0",
