--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*", "index.d.ts"]
 }
