--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,12 +1,5 @@
-FROM node:14.13.0-alpine3.12
+FROM node:14.11-slim
 
-# Install Shadow non busybox for better user management & support
-RUN apk add --no-cache git python3 build-base
-
-# Add Sudo to allow occasional usage of root. I wish I could remove this but I can't seem to get the node_modules volume working correctly.
-RUN apk add --no-cache sudo \
-  && echo node ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/node \
-  && chmod 0440 /etc/sudoers.d/node
-
-
-CMD [ "tail", "-f", "/dev/null" ]
+USER root
+# [Optional] Uncomment this section to install additional OS packages.
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive && apt-get -y install --no-install-recommends git sudo ca-certificates
