--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@elastic.io/ntlm-client": "^1.0.0",
     "axios": "^0.20.0",
+    "bull": "^3.18.0",
     "date-fns": "^2.16.1",
     "got": "^11.7.0",
     "js-yaml": "^3.14.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@k-foss/ts-esnode": "^1.7.0",
+    "@types/bull": "^3.14.3",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "^14.11.5",
     "@types/ntlm-client": "^0.1.0",
