--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,30 @@
 {
-  "extends": "tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
-  }
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "allowSyntheticDefaultImports": true,
+    // Strict Rules
+    "strict": true,
+    "alwaysStrict": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "strictPropertyInitialization": false,
+    // Source Maps
+    "inlineSourceMap": true,
+    // Features
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "outDir": "dist",
+    "baseUrl": "./src",
+    "paths": {
+      "ts-lazychecker/*": [
+        "./*"
+      ]
+    }
+  },
+  "include": [
+    "src/**/*",
+    "index.d.ts"
+  ]
 }
