--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -20,3 +20,16 @@ jobs:
         run: npm ci
       - name: Run Tests
         run: npm run test
+
+  Build:
+    runs-on: ubuntu-latest
+    needs: [Test]
+    steps:
+      - uses: actions/checkout@master
+      - name: Publish to Registry
+        uses: KristianFJones/Publish-Docker-Github-Action@master
+        with:
+          dockerfile: Dockerfile
+          name: kristianfjones/ts-lazychecker
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
