--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,6 +1,9 @@
-name: Testing
+name: Build
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   Test:
@@ -25,11 +28,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: [Test]
     steps:
-      - uses: actions/checkout@v2.3.4
-      - name: Publish to Registry
-        uses: KristianFJones/Publish-Docker-Github-Action@master
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v2.1.4
         with:
-          dockerfile: Dockerfile
-          name: kristianfjones/ts-lazychecker
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          node-version: '14.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Install dependencies
+        run: npm ci
+
+      ## Run [semantic-release](https://github.com/semantic-release/semantic-release) auto release/publish system
+      - name: Run semantic-release
+        run: npx semantic-release
