--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "TS-Core is a github repo template for TypeScript Projects",
   "main": "src/index.ts",
   "type": "module",
-  "private": true,
   "scripts": {
     "test": "ts-estest ./src",
     "prepublishOnly": "npm run build",
@@ -27,7 +26,10 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@eclass/semantic-release-docker": "^1.0.6",
     "@k-foss/ts-estests": "^1.0.6",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@types/bull": "^3.14.4",
     "@types/js-yaml": "^4.0.0",
     "@types/node": "^14.14.21",
@@ -36,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "ajv": "^7.0.3",
+    "conventional-changelog-conventionalcommits": "^4.5.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-config-standard": "^16.0.2",
@@ -47,7 +50,8 @@
     "fastify": "^3.10.1",
     "fluent-json-schema": "^2.0.3",
     "nodemon": "^2.0.7",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "semantic-release": "^17.3.3"
   },
   "author": "",
   "license": "MIT"
