--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@elastic.io/ntlm-client": "^1.0.0",
     "@k-foss/ts-esnode": "^1.7.0",
-    "bull": "^3.20.0",
+    "bullmq": "^1.14.0",
     "date-fns": "^2.16.1",
     "got": "^11.8.1",
     "js-yaml": "^4.0.0",
@@ -30,7 +30,6 @@
     "@k-foss/ts-estests": "^1.0.6",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
-    "@types/bull": "^3.14.4",
     "@types/js-yaml": "^4.0.0",
     "@types/node": "^14.14.21",
     "@types/ntlm-client": "^0.1.0",
