--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "typescript.tsdk": "/workspace/node_modules/typescript/lib"
+  "typescript.tsdk": "/workspace/node_modules/typescript/lib",
+  "yaml.schemas": {
+    "/workspace/schemas/Config.json": ["config.yaml", "config.yml"],
+  },
 }
