--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "typescript.tsdk": "/workspace/node_modules/typescript/lib",
   "yaml.schemas": {
     "/workspace/schemas/Config.json": ["config.yaml", "config.yml"],
+    "/workspace/schemas/Zones.json": ["zones.yaml", "zones.yml"],
   },
 }
