--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "yaml.schemas": {
     "/workspace/schemas/Config.json": ["config.yaml", "config.yml"],
     "/workspace/schemas/Zones.json": ["zones.yaml", "zones.yml"],
+    "/workspace/schemas/Firewalls.json": ["firewalls.yaml", "firewalls.yml"],
   },
 }
