--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,8 @@
     "prettier/@typescript-eslint"
   ],
   "rules": {
+    "no-useless-constructor": "off",
+    
     // https://github.com/typescript-eslint/typescript-eslint/blob/master/packages/eslint-plugin/docs/rules/no-unused-vars.md
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
