--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@elastic.io/ntlm-client": "^1.0.0",
     "@k-foss/ts-esnode": "^1.7.0",
+    "adaptivecards": "^2.6.0",
     "ajv": "^7.0.3",
     "bullmq": "^1.14.0",
     "cron-parser": "^3.1.0",
