--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prettier": "prettier --config .prettierrc --check \"src/**/*ts\"",
     "lint": "eslint ./src --ext .js,.ts",
     "listMachines": "node --loader @k-foss/ts-esnode --experimental-modules --experimental-specifier-resolution=node --harmony-top-level-await ./src/bin/listMachines.ts",
-    "run:generateSchema": "node --loader @k-foss/ts-esnode --experimental-modules --experimental-specifier-resolution=node --harmony-top-level-await ./src/bin/generateSchema.ts"
+    "run:generateSchema": "node --loader @k-foss/ts-esnode --experimental-modules --experimental-specifier-resolution=node --harmony-top-level-await ./src/bin/Schema/generateSchema.ts"
   },
   "dependencies": {
     "@elastic.io/ntlm-client": "^1.0.0",
@@ -52,6 +52,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^5.0.0",
     "fastify": "^3.10.1",
+    "json-schema-to-typescript": "^10.1.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "semantic-release": "^17.3.3"
