feat: Cleanup Config, prepare for release of current upgrades

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "typescript.tsdk": "/workspace/node_modules/typescript/lib",
   "yaml.schemas": {
-    "/workspace/schemas/Config.json": ["config.yaml", "config.yml"],
+    "/workspace/schemas/Config.json": ["config.yaml", "config.yml", "/workspace/src/Modules/Config/Fixtures/*.yaml"],
     "/workspace/schemas/Zones.json": ["zones.yaml", "zones.yml"],
     "/workspace/schemas/Firewalls.json": ["firewalls.yaml", "firewalls.yml"],
   },
